--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -126,3 +126,5 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+server:
+    contextPath: '/cs4760progassign'
